--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-particles-js": "^2.3.0",
+    "react-responsive": "^5.0.0",
     "react-scripts": "1.1.5",
     "tachyons": "^4.11.1"
   },
